manifests/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nabilah-nginx-deployment
  namespace: nabilah-eks-activity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: nabilah-nginx-service-account
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
