manifests/httpd-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nabilah-clusterip-service
  namespace: nabs-eks-activity
spec:
  type: ClusterIP
  selector:
    app: httpd-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5678
