manifests/httpd-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nabilah-loadbalancer-service
  namespace: nabs-eks-activity
spec:
  type: LoadBalancer
  selector:
    app: httpd-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
