manifests/httpd-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nabilah-nodeport-service
  namespace: nabs-eks-activity
spec:
  type: NodePort
  selector:
    app: httpd-app
  ports:
    - protocol: TCP
      port: 30001
      targetPort: 5678
