manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nabilah-nginx-service
  namespace: nabilah-eks-activity
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
