manifests/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: nabilah-prom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: nabilah-prom.sctp-sandbox.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nabilah-prom-prometheus-server
                port:
                  number: 80
